...
            }
        }

        Spacer(modifier = Modifier.height(16.dp))

        Text(
            text = "Reminder Mate 2.0",
            style = MaterialTheme.typography.headlineMedium,
            fontWeight = FontWeight.Bold,
            color = MaterialTheme.colorScheme.onSurface
        )

        Text(
...
