...
        ) {
            item {
                SettingsSectionTitle(stringResource(id = R.string.appearance_section_title))
            }
            item {
                SettingsItem(
                    modifier = Modifier.testTag("setting_theme"), // Tag for the main row
                    icon = if (uiState.theme == Theme.DARK) Icons.Default.DarkMode else Icons.Default.LightMode,
                    title = stringResource(id = R.string.theme_setting_title),
                    subtitle = stringResource(id = uiState.theme.toStringResource()),
                    onClick = { showThemeDialog = true }
                )
            }
...
